UPD: Clearer substring logic in event transform

--- a/ZenPacks/daviswr/Interfaces/zenpack.yaml
+++ b/ZenPacks/daviswr/Interfaces/zenpack.yaml
@@ -1543,7 +1543,7 @@ event_classes:
                   and current <= 100000000):
               evt._action = 'drop'
           # Drop if span port
-          elif descr.lower().find(' span') > -1:
+          elif ' span' in descr.lower():
               evt._action = 'drop'
           else:
               util = (current / speed) * 100
