FIX: Transform doesn't assume datasource names

--- a/ZenPacks/daviswr/Interfaces/zenpack.yaml
+++ b/ZenPacks/daviswr/Interfaces/zenpack.yaml
@@ -25,7 +25,7 @@ propVirtual|softwareLoopback|Voice)'
         datasources:
           DEFAULTS:
             type: SNMP
-            
+
           ifInOctets:
             oid: .1.3.6.1.2.1.2.2.1.10
             datapoints:
@@ -285,7 +285,7 @@ propVirtual|softwareLoopback|Voice)'
         datasources:
           DEFAULTS:
             type: SNMP
-            
+
           ifHCInOctets:
             oid: .1.3.6.1.2.1.31.1.1.1.6
             datapoints:
@@ -577,7 +577,7 @@ propVirtual|softwareLoopback|Voice)'
             eventClass: /Perf/Interface
             maxval: 10
 
-            
+
   /Network:
     templates:
       # /Devices/Network/ethernetCsmacd_64
@@ -588,7 +588,7 @@ propVirtual|softwareLoopback|Voice)'
         datasources:
           DEFAULTS:
             type: SNMP
-            
+
           ifHCInOctets:
             oid: .1.3.6.1.2.1.31.1.1.1.6
             datapoints:
@@ -878,7 +878,7 @@ propVirtual|softwareLoopback|Voice)'
         datasources:
           DEFAULTS:
             type: SNMP
-            
+
           ifHCInOctets:
             oid: .1.3.6.1.2.1.31.1.1.1.6
             datapoints:
@@ -1163,7 +1163,7 @@ propVirtual|softwareLoopback|Voice)'
         datasources:
           DEFAULTS:
             type: SNMP
-            
+
           ifInOctets:
             oid: .1.3.6.1.2.1.2.2.1.10
             datapoints:
@@ -1476,33 +1476,31 @@ event_classes:
     remove: false
     transform: |-
       import re
-      
+
       DUPLEX_UNKNOWN = 1
       DUPLEX_HALF = 2
       DUPLEX_FULL = 3
-      
+
       current = float(getattr(evt, 'current', '0.0'))
-      
+
       # Determine direction
-      if evt.eventKey.startswith('ifHCOut') or evt.eventKey.startswith('ifOut'):
+      if 'ifHCOut' in evt.eventKey or 'ifOut' in evt.eventKey:
           direction = 'output'
-      elif evt.eventKey.startswith('ifHCIn') or evt.eventKey.startswith('ifIn'):
+      elif 'ifHCIn' in evt.eventKey or 'ifIn' in evt.eventKey:
           direction = 'input'
-      
-      # Zenoss 4.2 replaces / in evt.component with _
-      # even though it displays / in the event
+
       match = re.search(r'^(\D{2})\D+(\d*_?\d*_?\d*)$', evt.component)
       if match:
           evt.component = re.sub('_', '/', evt.component)
       if_name = evt.component
-      
+
       # Find short name of interface, if possible
       match = re.search(r'^(\D{2})\D+(\d*/?\d*/?\d*)$', if_name)
-      if match and 'Server' in device.getDeviceClassPath():
+      if match and 'Server' not in device.getDeviceClassPath():
           if_name_short = match.groups()[0] + match.groups()[1]
       else:
           if_name_short = if_name
-      
+
       # Find interface's bandwidth to get utilization as percentage
       # Also interface description and duplex
       duplex = DUPLEX_UNKNOWN
@@ -1515,12 +1513,9 @@ event_classes:
               if len(iface.description) > 0:
                   descr = '(%s)' % (iface.description)
               break
-      
+
       # Throughput threshold
-      if (evt.eventKey == 'ifHCInOctets_ifHCInOctets|Throughput'
-              or evt.eventKey == 'ifHCOutOctets_ifHCOutOctets|Throughput'
-              or evt.eventKey == 'ifInOctets_ifInOctets|Throughput'
-              or evt.eventKey == 'ifOutOctets_ifOutOctets|Throughput'):
+      if evt.eventKey.endswith('Octets|Throughput'):
           # Current value in bits
           current = current * 8
           if current > 1000000000:
@@ -1531,7 +1526,7 @@ event_classes:
               usage = '%3.1f Kbps' % (current / 1000)
           else:
               usage = '%3.1f bps' % (current)
-      
+
           # Drop if interface speed unknown
           if 0 == speed:
               evt._action = 'drop'
@@ -1566,13 +1561,10 @@ event_classes:
                       util,
                       usage
                       )
-      
+
       # Broadcast/Multicast threshold
-      elif (evt.eventKey == 'ifHCInMulticastPkts_ifHCInMulticastPkts|Multicast'
-            or evt.eventKey == 'ifHCInBroadcastPkts_ifHCInBroadcastPkts|Broadcast'
-            or evt.eventKey == 'ifInMulticastPkts_ifInMulticastPkts|Multicast'
-            or evt.eventKey == 'ifInBroadcastPkts_ifInBroadcastPkts|Broadcast'
-            or evt.eventKey == 'ifInNUcastPkts_ifInNUcastPkts|Multicast'):
+      elif (evt.eventKey.endswith('Pkts|Multicast')
+              or evt.eventKey.endswith('Pkts|Broadcast')):
           traffic = evt.eventKey.split('|')[1].lower()
           evt.summary = '%s %s %s %s rate at %3.0f packets per second' % (
               if_name_short,
@@ -1591,11 +1583,9 @@ event_classes:
                   if neighbor.location == evt.component:
                       evt._action = 'drop'
                       break
-      
+
       # Error threshold
-      elif (evt.eventKey == 'ifInErrors_ifInErrors|Errors'
-            or evt.eventKey == 'ifOutErrors_ifOutErrors|Errors'):
-      
+      elif evt.eventKey.endswith('Errors|Errors'):
           # Nothing we can do about errors on a half-duplex port
           if duplex == DUPLEX_HALF:
               evt._action = 'drop'
@@ -1616,10 +1606,9 @@ event_classes:
                   direction,
                   time
                   )
-      
+
       # Discard threshold
-      elif (evt.eventKey == 'ifInDiscards_ifInDiscards|Drops'
-            or evt.eventKey == 'ifOutDiscards_ifOutDiscards|Drops'):
+      elif evt.eventKey.endswith('Discards|Drops'):
           if current < 1:
               current = current * 60
               time = 'minute'
